--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -3,13 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import augur\n",
-    "from augur.PiperReader import PiperMail\n",
+    "from augur.piper_reader import PiperMail\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
     "# import everything from githubapi.py and ghtorrent.py so we can\n",
     "# just copy and paste our function later\n",
@@ -123,8 +121,6 @@
     "    k = 0\n",
     "    di = {}\n",
     "    #print(\"HEREEEE\")\n",
-    "    if(pos == \"lkml\"):\n",
-    "        time = Piper.convert_date(\"Thu, 1 Jan 2013 20:37:11 +0000\")\n",
     "    for message in repo.fetch(from_date=time):\n",
     "        #print(message,\"\\n\\n\\n\\n\\n\\n\\n\\n\")\n",
     "        #print(message['data']['Message-ID'])\n",
@@ -227,106 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-08-01 16:50:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-08-01 16:50:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "runtime/mailing_lists.csv Place\n",
-      "yeah\n",
-      "Link,mail_list\n",
-      "\n",
-      "https://lists.opendaylight.org/pipermail/,\"aalldp-dev\"\n",
-      "\n",
-      "['aalldp-dev', 'archetypes-dev'] mail_list\n",
-      "{'aalldp-dev': False, 'archetypes-dev': False}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO 2/2 MBoxes downloaded\n",
-      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.mbox[18033] INFO Done. 6/6 messages fetched; 0 ignored\n",
-      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Fetch process completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting\n",
-      "getting\n",
-      "yep\n",
-      "got-em\n",
-      "4\n",
-      "['aalldp-dev']\n",
-      "2018-07-06 18:39:58\n",
-      "File uploaded  13\n",
-      "Mailing List Job uploaded\n",
-      "Finished\n",
-      "['aalldp-dev']\n",
-      "File uploaded  4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-08-01 16:50:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-08-01 16:50:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mailing List Job uploaded\n",
-      "Finished\n",
-      "Created File aalldp-dev\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO 1/1 MBoxes downloaded\n",
-      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.mbox[18033] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Fetch process completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting\n",
-      "1\n",
-      "['archetypes-dev']\n",
-      "File uploaded  4\n",
-      "Mailing List Job uploaded\n",
-      "Finished\n",
-      "['archetypes-dev']\n",
-      "File uploaded  4\n",
-      "Mailing List Job uploaded\n",
-      "Finished\n",
-      "Created File archetypes-dev\n",
-      "{'aalldp-dev': 'new', 'archetypes-dev': 'new'}\n",
-      "Finished downloading files\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create an Augur application so we can test our function\n",
     "if \"notebooks\" in os.getcwd():\n",
