--- a/notebooks/github-issues.ipynb
+++ b/notebooks/github-issues.ipynb
@@ -140,7 +140,8 @@
     "    print(\"yeah\")\n",
     "if (os.stat(path).st_size == 0):\n",
     "    file.write(\"owner,repo_url\\n\")\n",
-    "    file.write(\"nodejs,\\\"CTC\\\"\\n\")\n",
+    "    file.write(\"chaoss,\\\"whitepaper\\\"\\n\")\n",
+    "    file.write(\"chaoss,\\\"prospector\\\"\\n\")\n",
     "    #file.write(\"https://lists.opendaylight.org/pipermail/,\\\"archetypes-dev\\\"\\n\")\n",
     "    print(\"Please enter the mailing lists and the links for them please\")\n",
     "    print(\"Going to the default mailing lists\")\n",
@@ -150,7 +151,8 @@
     "    print(line)\n",
     "    count+=1\n",
     "    if(count == 2):\n",
-    "        break"
+    "        break\n",
+    "file.close()"
    ]
   },
   {
