--- a/notebooks/github_pull_requests.ipynb
+++ b/notebooks/github_pull_requests.ipynb
@@ -120,11 +120,8 @@
      "output_type": "stream",
      "text": [
       "runtime/git_repos.csv\n",
-      "yeah\n",
-      "owner,repo_url\n",
-      "\n",
-      "chaoss,\"whitepaper\"\n",
-      "\n"
+      "Please enter the mailing lists and the links for them please\n",
+      "Going to the default mailing lists\n"
      ]
     }
    ],
@@ -140,7 +137,8 @@
     "    print(\"yeah\")\n",
     "if (os.stat(path).st_size == 0):\n",
     "    file.write(\"owner,repo_url\\n\")\n",
-    "    file.write(\"nodejs,\\\"CTC\\\"\\n\")\n",
+    "    file.write(\"chaoss,\\\"whitepaper\\\"\\n\")\n",
+    "    file.write(\"OSSHealth,\\\"ResearchProject\\\"\\n\")\n",
     "    #file.write(\"https://lists.opendaylight.org/pipermail/,\\\"archetypes-dev\\\"\\n\")\n",
     "    print(\"Please enter the mailing lists and the links for them please\")\n",
     "    print(\"Going to the default mailing lists\")\n",
@@ -150,7 +148,8 @@
     "    print(line)\n",
     "    count+=1\n",
     "    if(count == 2):\n",
-    "        break"
+    "        break\n",
+    "file.close()"
    ]
   },
   {
@@ -164,8 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-08-07 09:03:31 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/GeorgLink\n",
-      "2018-08-07 09:03:31 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/howderek\n"
+      "2018-08-07 10:31:44 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/GeorgLink\n"
      ]
     },
     {
@@ -179,11 +177,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-08-07 09:03:32 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/germonprez\n",
-      "2018-08-07 09:03:35 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/bkeepers\n",
-      "2018-08-07 09:03:36 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/downeym\n",
-      "2018-08-07 09:03:37 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/abuhman\n",
-      "2018-08-07 09:03:38 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/sgoggins\n"
+      "2018-08-07 10:31:45 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/howderek\n",
+      "2018-08-07 10:31:46 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/germonprez\n",
+      "2018-08-07 10:31:49 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/bkeepers\n",
+      "2018-08-07 10:31:49 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/downeym\n",
+      "2018-08-07 10:31:50 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/abuhman\n",
+      "2018-08-07 10:31:51 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/sgoggins\n"
      ]
     },
     {
@@ -199,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-08-07 09:03:47 keanu-Inspiron-5567 root[7984] INFO Getting info for https://api.github.com/users/rpaik\n"
+      "2018-08-07 10:32:01 keanu-Inspiron-5567 root[13012] INFO Getting info for https://api.github.com/users/rpaik\n"
      ]
     },
     {
