--- a/notebooks/github-issues.ipynb
+++ b/notebooks/github-issues.ipynb
@@ -25,6 +25,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load\n",
+    "\n",
+    "First loads the users data from 'augur.config.json' so will take the Database information (e.g. name of database, port of database). Then connects to the database using augur.App.github_issues() and takes the details of the database and connects to to the database using charset 'utf8'. It also makes a connection to piper_reader"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -43,6 +52,15 @@
     "        )\n",
     "db = s.create_engine(DB_STR)\n",
     "Piper, path= augurApp.piper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect:\n",
+    "\n",
+    "Queries what tables are in the database and determines if 'github_issues_2' is there if it is then 'git_repos' is set as 'True', if it isn't there 'git_repos' is set as 'False'. Then we determine what git repositories are in 'github_issues_repo_jobs' and determine how many rows are in it. If 'github_issues_repo_jobs' is not in the database it is created and the column 'augurlistID' is set as the primary key. We then add a connection to 'github_issues_repo_jobs' so that we can change the column 'last_run' if new messages were downloaded for a git repository."
    ]
   },
   {
@@ -111,6 +129,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write to file:\n",
+    "\n",
+    "Determines if the file with the git repositories were created, if not it writes a set of default git repositories (to show how the program would work)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -152,24 +179,20 @@
     "    count+=1\n",
     "    if(count == 2):\n",
     "        break\n",
-    "file.close()"
+    "file.close()\n",
+    "\n",
+    "print(df1['project'].values)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(df1['project'].values)"
+    "## Iteration through github repositories\n",
+    "\n",
+    "This first reads the git repositories stored in 'path' and we also get the current date 'today'. We then create a dataframe 'github_issues_2' that will store all the comments under an issue and the issue itself. Grouping the issues by owner we iterate through the different repositories and then iterate over the messages for a particular issue. We then pull the  data from GitHub and we determine if the repository is stored in 'github_issues_repo_jobs', if it is we set 'new' to 'True' and store that repository so it can be added to the table 'github_issues_repo_jobs and 'froms' is set as 'None'. If it is in 'github_issues_repo_jobs' we set today's date to 'last_run' for the repository in 'github_issues_repo_jobs' and 'froms' is set as today's date.\n",
+    "\n",
+    "We then go about downloading the github issues for a particular repository, the 'from_date' is set as 'froms'. We then convert issues to a format that can be uploaded to the datebase. If the git repository is stored in 'github_issues_repo_jobs' then only the issues that occur after the date stored in 'last_run' is uploaded. If the git repository isn't in the database all the issues are uploaded. We finally upload the git repositories information to the table 'github_issues_repo_jobs'. Since github has a limit as to how much data can be downloaded, if a large repository with a number of issues is being downloaded the program will run for hours, since the Rate limit must be reset which takes around an hour each time."
    ]
   },
   {
@@ -6623,20 +6646,6 @@
     }
    ],
    "source": [
-    "# Url for the git repo to analyze\n",
-    "#repo_url = 'https://github.com/chaoss/grimoirelab-perceval'\n",
-    "#repo_url = 'CTC'\n",
-    "# Directory for letting Perceval clone the git repo\n",
-    "#repo_dir = 'CTC'\n",
-    "#own = 'nodejs'\n",
-    "# ElasticSearch instance (url)\n",
-    "#repo = 'grimoirelab-perceval'\n",
-    "# Create the 'commits' index in ElasticSearch\n",
-    "# Create a Git object, pointing to repo_url, using repo_dir for cloning\n",
-    "\n",
-    "#32\n",
-    "#date = datetime.datetime(2017, 8, 7, 0, 0, 0,\n",
-    "#                                     tzinfo=dateutil.tz.tzutc())\n",
     "'''\n",
     "owner,repo_url\n",
     "torvalds,\"linux\"\n",
