--- a/notebooks/github_pull_requests_scores.ipynb
+++ b/notebooks/github_pull_requests_scores.ipynb
@@ -62,6 +62,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load\n",
+    "\n",
+    "First loads the users data from 'augur.config.json' so will take the Database information (e.g. name of database, port of database). Then connects to the database using augur.App.github_issues() and takes the details of the database and connects to to the database using charset 'utf8'. It also makes a connection to piper_reader, it then determines if 'github_pull_requests_2' is in the Database if so it stores the git repositories into 'df1'. It then loads the SentimentIntensityAnalyzer from NLTK (Natural Language Tool Kit) and stores the table 'github_pull_requests_2' which has all the github pull requests into 'df_users'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -77,133 +86,34 @@
     "            list1[0], list1[1], list1[2],\\\n",
     "            list1[3], list1[4]\n",
     "        )\n",
-    "db = s.create_engine(DB_STR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['github_issues', 'github_issues_2', 'github_issues_repo_jobs', 'github_issues_sentiment_scores', 'github_pull_request_repo_jobs', 'github_pull_requests', 'github_pull_requests_2', 'github_pull_requests_sentiment_scores', 'issue_response_time', 'mail_lists', 'mail_lists_sentiment_scores', 'mailing_list_jobs']\n"
-     ]
-    }
-   ],
-   "source": [
+    "db = s.create_engine(DB_STR)\n",
+    "\n",
     "table_names = s.inspect(db).get_table_names()\n",
-    "print(table_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "print(table_names)\n",
+    "\n",
     "if(\"github_pull_requests_2\" in table_names):\n",
     "    lists_createdSQL = s.sql.text(\"\"\"SELECT repo FROM github_pull_requests_2\"\"\")\n",
     "    df1 = pd.read_sql(lists_createdSQL, db)\n",
     "    #print(df1)\n",
-    "    val = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    val = True\n",
+    "\n",
     "tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')\n",
     "sid = SentimentIntensityAnalyzer()\n",
-    "col = 'score','sentiment'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   augurmsgID backend_name                                     repo_link  \\\n",
-      "0           1       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "1           2       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "2           3       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "3           4       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "4           5       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "\n",
-      "       owner             repo  \\\n",
-      "0  OSSHealth  ResearchProject   \n",
-      "1  OSSHealth  ResearchProject   \n",
-      "2  OSSHealth  ResearchProject   \n",
-      "3  OSSHealth  ResearchProject   \n",
-      "4  OSSHealth  ResearchProject   \n",
-      "\n",
-      "                                             subject  status      category  \\\n",
-      "0                            Consolidated Indicators  closed  pull_request   \n",
-      "1  Added broad categories, bolded indicators that...  closed  pull_request   \n",
-      "2             added indicators and ideas from LFOSLS  closed  pull_request   \n",
-      "3             added indicators and ideas from LFOSLS  closed  pull_request   \n",
-      "4                          Added use cases close #23  closed  pull_request   \n",
-      "\n",
-      "   pull_request_number                date  pull_request_id       user  \\\n",
-      "0                    4 2017-02-01 20:14:18        204692448  GeorgLink   \n",
-      "1                    8 2017-02-04 23:46:53        205387286  GeorgLink   \n",
-      "2                   18 2017-02-17 19:29:23        208533954  GeorgLink   \n",
-      "3                   18 2017-02-20 22:15:41        208533954  GeorgLink   \n",
-      "4                   24 2017-03-18 15:42:06        215202044  GeorgLink   \n",
-      "\n",
-      "                                                body  \n",
-      "0  I pulled together different files, included in...  \n",
-      "1  The edits respond to the conversation with @ho...  \n",
-      "2                                         close #15   \n",
-      "3  Since no one seems to object, I'll merge my ow...  \n",
-      "4  Responds to #23 \\r\\n\\r\\nI created a new branch...  \n",
-      "    augurmsgID backend_name                             repo_link   owner  \\\n",
-      "14          15       GitHub  https://github.com/chaoss/whitepaper  chaoss   \n",
-      "15          16       GitHub  https://github.com/chaoss/whitepaper  chaoss   \n",
-      "16          17       GitHub  https://github.com/chaoss/whitepaper  chaoss   \n",
-      "17          18       GitHub  https://github.com/chaoss/whitepaper  chaoss   \n",
-      "18          19       GitHub  https://github.com/chaoss/whitepaper  chaoss   \n",
-      "\n",
-      "          repo                                        subject  status  \\\n",
-      "14  whitepaper  How to contribute and more ideas for content.  closed   \n",
-      "15  whitepaper                                Add FAQ section  closed   \n",
-      "16  whitepaper                                Add FAQ section  closed   \n",
-      "17  whitepaper                           Update whitepaper.md  closed   \n",
-      "18  whitepaper                           Update whitepaper.md  closed   \n",
-      "\n",
-      "        category  pull_request_number                date  pull_request_id  \\\n",
-      "14  pull_request                    2 2018-01-22 20:55:50        290611948   \n",
-      "15  pull_request                    3 2018-02-04 17:14:26        294213130   \n",
-      "16  pull_request                    3 2018-02-04 17:39:41        294213130   \n",
-      "17  pull_request                    6 2018-03-04 06:52:42        302062739   \n",
-      "18  pull_request                    6 2018-03-04 13:01:39        302062739   \n",
-      "\n",
-      "          user                                               body  \n",
-      "14   GeorgLink      I'll leave it up for a day before I merge it.  \n",
-      "15   GeorgLink  We certainly have more FAQ, but these are a fe...  \n",
-      "16  germonprez  Those are a good set of questions. The WP woul...  \n",
-      "17       rpaik  Sorry, I haven't done this earlier.\\r\\n\\r\\nI s...  \n",
-      "18   GeorgLink  Thanks @rpaik, I will merge it to keep the ide...  \n"
-     ]
-    }
-   ],
-   "source": [
+    "col = 'score','sentiment'\n",
+    "\n",
     "SQL = \"\"\"SELECT * FROM github_pull_requests_2\"\"\"\n",
     "df_users =  pd.read_sql(SQL, db)\n",
     "print(df_users.head())\n",
     "print(df_users.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sentiment Scores:\n",
+    "\n",
+    "Groups all the messages by subject and then iterates through the subjects, it then iterates through the different messages in the subject and feeds this to the tokenizer which breaks the message into different parts and gives the sentiment for them and then finds the average of the parts. This is then added to df3."
    ]
   },
   {
@@ -275,6 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine\n",
+    "\n",
+    "Combines the dataframe with all the messages and joins that with the scores for the messages. Then uploads this to the database as 'github_pull_requests_sentiment_scores_2'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -287,69 +206,21 @@
     "df3 = df3.reset_index(drop=True)\n",
     "#print(df3.head())\n",
     "df_list = df_list.reset_index(drop=True)\n",
-    "combine = (df_list.join(df3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  augurmsgID backend_name                                     repo_link  \\\n",
-      "0          1       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "1          2       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "2          3       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "3          4       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "4          5       GitHub  https://github.com/OSSHealth/ResearchProject   \n",
-      "\n",
-      "       owner             repo  \\\n",
-      "0  OSSHealth  ResearchProject   \n",
-      "1  OSSHealth  ResearchProject   \n",
-      "2  OSSHealth  ResearchProject   \n",
-      "3  OSSHealth  ResearchProject   \n",
-      "4  OSSHealth  ResearchProject   \n",
-      "\n",
-      "                                             subject  status      category  \\\n",
-      "0                            Consolidated Indicators  closed  pull_request   \n",
-      "1  Added broad categories, bolded indicators that...  closed  pull_request   \n",
-      "2             added indicators and ideas from LFOSLS  closed  pull_request   \n",
-      "3             added indicators and ideas from LFOSLS  closed  pull_request   \n",
-      "4                          Added use cases close #23  closed  pull_request   \n",
-      "\n",
-      "  pull_request_number                date pull_request_id       user  \\\n",
-      "0                   4 2017-02-01 20:14:18       204692448  GeorgLink   \n",
-      "1                   8 2017-02-04 23:46:53       205387286  GeorgLink   \n",
-      "2                  18 2017-02-17 19:29:23       208533954  GeorgLink   \n",
-      "3                  18 2017-02-20 22:15:41       208533954  GeorgLink   \n",
-      "4                  24 2017-03-18 15:42:06       215202044  GeorgLink   \n",
-      "\n",
-      "                                                body  score sentiment  \n",
-      "0  I pulled together different files, included in...  0.319  Positive  \n",
-      "1  The edits respond to the conversation with @ho...  0.583  Positive  \n",
-      "2                                         close #15   0.827  Positive  \n",
-      "3  Since no one seems to object, I'll merge my ow...  0.081  Positive  \n",
-      "4  Responds to #23 \\r\\n\\r\\nI created a new branch...  0.125  Positive  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(combine.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "combine = (df_list.join(df3))\n",
+    "\n",
+    "print(combine.head())\n",
+    "\n",
     "combine.to_sql(name='github_pull_requests_sentiment_scores_2',\\\n",
     "               con=db,if_exists='replace',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graphs\n",
+    "\n",
+    "Takes all the git repositories in 'combine' and groups by the column 'repo_link' and gets the dates and sentiment scores and plots a graph based on this."
    ]
   },
   {
