add facade data source plugin unit tests

--- a/notebooks/contributor-classification.ipynb
+++ b/notebooks/contributor-classification.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "augurApp = augur.Application('../augur.cfg')\n",
+    "augur_app = augur.Application()('../augur.cfg')\n",
     "github = augurApp.github()\n",
     "ghtorrent = augurApp.ghtorrent()"
    ]
