--- a/notebooks/example-metrics.ipynb
+++ b/notebooks/example-metrics.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "%matplotlib inline\n",
     "# create an Augur application so we can test our function\n",
-    "augurApp = augur.Application('../augur.config.json')\n",
+    "augur_app = augur.Application()('../augur.config.json')\n",
     "github = augurApp.githubapi()\n",
     "ghtorrent = augurApp.ghtorrent()"
    ]
