--- a/notebooks/issue-response-viz-sean.ipynb
+++ b/notebooks/issue-response-viz-sean.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "%matplotlib inline\n",
     "# create an Augur application so we can test our function\n",
-    "augurApp = augur.Application('../augur.cfg')\n",
+    "augur_app = augur.Application()('../augur.cfg')\n",
     "github = augurApp.github()\n",
     "ghtorrent = augurApp.ghtorrent()"
    ]
