--- a/notebooks/issues-open-closed-example.ipynb
+++ b/notebooks/issues-open-closed-example.ipynb
@@ -32,7 +32,7 @@
     "%matplotlib inline\n",
     "\n",
     "# create an Augur application so we can test our function\n",
-    "augurApp = augur.Application('../augur.cfg')\n",
+    "augur_app = augur.Application()('../augur.cfg')\n",
     "ghtorrent = augurApp.ghtorrent()"
    ]
   },
