--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "augurApp = augur.Application('../augur.config.json')\n",
+    "augur_app = augur.Application()('../augur.config.json')\n",
     "# we only need an instance of the GitHubAPI class\n",
     "github = augurApp.githubapi()"
    ]
