--- a/notebooks/git-testing.ipynb
+++ b/notebooks/git-testing.ipynb
@@ -35,7 +35,7 @@
     "from urllib.parse import urlparse\n",
     "import tldextract\n",
     "\n",
-    "augurApp = augur.Application('../augur.config.json')\n",
+    "augur_app = augur.Application()('../augur.config.json')\n",
     "# we only need an instance of the GitHubAPI class\n",
     "g = augurApp.git()\n",
     "csv = augurApp.localcsv()\n",
